// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadRank should render ltr correctly 1`] = `
<div>
  <div
    class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 gaKqXW"
    dir="ltr"
  >
    <span
      class="StyledSpan-fs4y6m-3 htomqN"
    >
      1
    </span>
  </div>
</div>
`;

exports[`MostReadRank should render ltr with double digits correctly 1`] = `
<div>
  <div
    class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 dvvbaz"
    dir="ltr"
  >
    <span
      class="StyledSpan-fs4y6m-3 htomqN"
    >
      10
    </span>
  </div>
</div>
`;

exports[`MostReadRank should render rtl correctly 1`] = `
<div>
  <div
    class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 jpBIxf"
    dir="rtl"
  >
    <span
      class="StyledSpan-fs4y6m-3 bvXRlE"
    >
      ۱
    </span>
  </div>
</div>
`;

exports[`MostReadRank should render rtl with double digits correctly 1`] = `
<div>
  <div
    class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 jmGdsg"
    dir="rtl"
  >
    <span
      class="StyledSpan-fs4y6m-3 bvXRlE"
    >
      ۱۰
    </span>
  </div>
</div>
`;
